# src/modules/accounts/entities/User.ts
@@ -1,8 +1,7 @@
 import { Column, CreateDateColumn, Entity, PrimaryColumn } from 'typeorm';
 import { v4 as uuidV4 } from 'uuid';
-
-@Entity('specifications')
-class Specification {
+@Entity('users')
+class User {
   @PrimaryColumn()
   id: string;
 
@@ -10,7 +9,19 @@ class Specification {
   name: string;
 
   @Column()
-  description: string;
+  email: string;
+
+  @Column()
+  password: string;
+
+  @Column()
+  driver_license: string;
+
+  @Column()
+  isAdmin: boolean;
+
+  @Column()
+  avatar: string;
 
   @CreateDateColumn()
   created_at: Date;
@@ -22,4 +33,4 @@ class Specification {
   }
 }
 
-export { Specification };
+export { User };
