# src/routes/index.ts
@@ -1,10 +1,13 @@
-import { Router } from "express";
-import { categoriesRoutes } from "./categories.routes";
-import { specificationRoutes } from "./specifications.routes";
-const router = Router()
+import { Router } from 'express';
+import { authenticateRoutes } from './authenticate.routes';
+import { categoriesRoutes } from './categories.routes';
+import { specificationRoutes } from './specifications.routes';
+import { usersRoutes } from './users.routes';
+const router = Router();
 
-router.use("/categories",categoriesRoutes);
+router.use('/categories', categoriesRoutes);
+router.use('/specifications', specificationRoutes);
+router.use('/users', usersRoutes);
+router.use(authenticateRoutes);
 
-router.use("/specifications",specificationRoutes);
-
-export {router}
+export { router };
